# Gagnon2016-Dynamic-Lapped-Texture

./: README.md
HoudiniPlugin/: setupenv.sh
HoudiniPlugin/cmake/: FindANN.cmake  FindHDK.cmake
HoudiniPlugin/texturingfluids/: CMakeLists.txt  version.h
HoudiniPlugin/texturingfluids/Approaches/: AtlasGagnon2016Synthesis.cpp  AtlasGagnon2016Synthesis.h  DynamicLappedTexture.cpp  DynamicLappedTexture.h
HoudiniPlugin/texturingfluids/Core/: HoudiniUtils.cpp  HoudiniUtils.h
HoudiniPlugin/texturingfluids/Core/Atlas/: Atlas.h  AtlasGagnon2016.cpp  AtlasGagnon2016.h  Blending.h  BlendingGagnon2016.cpp  BlendingGagnon2016.h  TBBAtlasGagnon2016.h
HoudiniPlugin/texturingfluids/Core/Deformations/: DistortionMetricSorkine2002.cpp  DistortionMetricSorkine2002.h  ParametersDeformablePatches.h  ParametersDistortion.h
HoudiniPlugin/texturingfluids/Core/Gagnon2016/: Bridson2012PoissonDiskDistribution.cpp  Bridson2012PoissonDiskDistribution.h  LappedSurfaceGagnon2016.cpp  LappedSurfaceGagnon2016.h  ParticleAndTrackerManagerGagnon2016.cpp  ParticleAndTrackerManagerGagnon2016.h  PatchedSurfaceGagnon2016.cpp  PatchedSurfaceGagnon2016.h
HoudiniPlugin/texturingfluids/HoudiniPlugins/: AtlasGagnon2016Plugin.h  AtlasGagnon2106Plugin.cpp  DynamicLappedTexturePlugin.cpp  DynamicLappedTexturePlugin.h  HoudiniPluginsDescriptions.cpp
HoudiniPlugin/texturingfluids/Images/: CMakeLists.txt  Color.cpp  Color.h  GaussianPyramid.cpp  GaussianPyramid.h  Image.h  ImageCV.cpp  ImageCV.h  ImageVolumetric.cpp  ImageVolumetric.h  package.py
HoudiniPlugin/texturingfluids/Math/: Vec3.h  Vec3.hpp  mtime.cpp  triangle.cpp  triangle.h
HoudiniPlugin/texturingfluids/Set/: Element.h  GridSet.cpp  GridSet.h  KdTree.cpp  KdTree.h  KdTreeNode.cpp  KdTreeNode.h  Node.h  Set.cpp  Set.h  SpaceStructuredSet.cpp  SpaceStructuredSet.h  SpatialGrid.h  SpatialGrid.hpp  Tree.h  point_set.cpp  point_set.h
HoudiniPlugin/texturingfluids/Set/SetFactory/: KDTreeFactory.h
HoudiniPlugin/texturingfluids/Set/SetFactory/.svn/: all-wcprops  entries
HoudiniPlugin/texturingfluids/Set/SetFactory/.svn/text-base/: GridFactory.cpp.svn-base  GridFactory.h.svn-base  KDTreeFactory.cpp.svn-base  StructureFactory.cpp.svn-base  StructureFactory.h.svn-base
HoudiniPlugin/texturingfluids/Strategies/: StrategyPatchSurfaceSynthesis.h
setup/rez/: CMakeLists.txt  package.py
